feat: 增加海盗船

--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@ body {
   background: #401DDC;
 }
 
+.activity-area-btn + .activity-area-btn {
+  margin-left: .2rem;
+}
+
 
 </style>
 </head>
@@ -249,6 +253,7 @@ body {
     </div>
     <div class="activity-area">
       <div class="activity-area-btn" data-place="ferris.html">摩天轮</div>
+      <div class="activity-area-btn" data-place="ship.html">海盗船</div>
     </div>
 
     <div class="btn charge-btn">我要充钱！！！</div>
